# klsh-course

./: CMakeLists.txt
docs/cmake/: readme.md
docs/git/: readme.md
docs/graphviz/: example.dot  readme.md
problems/: CMakeLists.txt
problems/akinator/src/: CMakeLists.txt  akinator.c
problems/binary_tree/: readme.md
problems/binary_tree/src/: CMakeLists.txt  binary_tree.c  binary_tree.h
problems/binary_tree/tests/: CMakeLists.txt  test_tree.c
