#============================================================================#

cmake_minimum_required(VERSION 3.14)

project(klsh-c-u3)

set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

#============================================================================#

# find_package(Check REQUIRED)
# include_directories(${CHECK_INCLUDE_DIRS})
# link_directories(${CHECK_LIBRARY_DIRS})

#============================================================================#

add_subdirectory(problems)

#============================================================================#
